# Kirby2D

./: .gitignore  Kirby.sln
02-Bubble/: 02-Bubble.vcxproj  TileMap.cpp  main.cpp
02-Bubble/images/: Thumbs.db
02-Bubble/levels/: kawaii.txt
Kirby/: BaseEnemy.cpp  BaseEnemy.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  Character.cpp  Character.h  ColisionHelper.cpp  ColisionHelper.h  Constants.h  GUI.cpp  GUI.h  Game.h  Kirby.filters  Kirby.vcxproj  Kirby.vcxproj.filters  PinxoEnemy.cpp  PinxoEnemy.h  Player.cpp  Player.h  ProjectileObject.h  Scene.cpp  Scene.h  Sprite.cpp  TileMap.cpp  TileMap.h  main.cpp
Kirby/Release/Kirby.tlog/: Kirby.lastbuildstate  cl.command.1.tlog
Kirby/base/: Constants.h  CreditsScreen.cpp  CreditsScreen.h  Defines.h  GUI.cpp  GUI.h  Game.cpp  Game.h  InstructionsScreen.cpp  InstructionsScreen.h  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Text.cpp  TileMap.cpp
Kirby/characters/: AquaEnemy.cpp  AquaEnemy.h  AquaKirby.cpp  AquaKirby.h  AttackEnemy.cpp  AttackEnemy.h  BaseEnemy.cpp  BaseEnemy.h  BlackKirby.cpp  BlackKirby.h  Character.cpp  Character.h  FireEnemy.cpp  FireEnemy.h  FireKirby.cpp  FireKirby.h  FlyingDummyEnemy.cpp  FlyingDummyEnemy.h  IceKirby.cpp  IceKirby.h  IcyEnemy.cpp  IcyEnemy.h  Kirby.cpp  Kirby.h  PinxoEnemy.cpp  PinxoEnemy.h  Player.cpp  Player.h  PowerType.h  WalkingDummyEnemy.cpp  WalkingDummyEnemy.h
Kirby/helpers/: ColisionHelper.cpp  ColisionHelper.h  SoundHelper.cpp  SoundHelper.h  TransformationHelper.cpp  TransformationHelper.h
Kirby/images/: Thumbs.db
Kirby/levels/: Cloudy_lvl.tmx  Cloudy_lvl.txt  Cloudy_lvl_No collision.csv  KAWAII.tmx  cloudy_lvl_01.txt  cloudy_lvl_01_all.txt  cloudy_lvl_01_no_cols.txt  cloudy_lvl_no_collision.txt  kawaii.txt  kawaii_no_cols.txt  level01.txt  level01_enemies.txt  level01_objects.txt  lvl02_enemies.txt  lvl02_objects.txt  lvl03_enemies.txt  lvl03_objects.txt  portals_lvl_03 _no_cols.txt  portals_lvl_03.txt  portals_lvl_03_no_cols.txt  portalt_level.tmx  portalt_level_all.txt  sid.txt
Kirby/objects/: BaseObject.cpp  BaseObject.h  BigObject.cpp  BigObject.h  DoorObject.cpp  DoorObject.h  EnergyObject.cpp  EnergyObject.h  LifeObject.cpp  LifeObject.h  PortalObject.cpp  PortalObject.h  ProjectileObject.cpp  ProjectileObject.h  RotationObject.cpp  RotationObject.h  SquareTileObject.cpp  SquareTileObject.h
Kirby/shaders/: simple.frag  simple.vert  texture.frag  texture.vert
Kirby/shaders_linux/: text.frag  text.vert  texture.frag
assets/: Thumbs.db  aqua_kirby_spritesheet.xcf  attacks.xcf  base_spritesheet.xcf  bird_enemy_spritesheet.xcf  chicken_enemy_spritesheet.xcf  credits.xcf  enemies.xcf  fire_kirby_spritesheet.xcf  fire_kirby_transpxcf.xcf  game_over.xcf  instructions_bg.xcf  kirby_sprites_transp.xcf  kirby_spritesheet.xcf  mainMenu_hard.xcf  menu.xcf  menu_gui.xcf  normal_ability.xcf  pinxos_spritesheet.xcf
libs/SFML-2.4.0/doc/: sfml.chm
shaders_linux_alec/: simple.vert  text.frag  text.vert  texture.frag  texture.vert
